<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_on_primary"
    android:orientation="vertical"
    android:padding="30dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_ajustes"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:id="@+id/tv_ajustes_tb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/preferences_options"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold">
        </TextView>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/sw_ajustes_unidades"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:minHeight="48dp"
            android:text="@string/preferences_metric_system" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/sp_ajustes_idioma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/languages"
            android:minHeight="48dp"
            android:spinnerMode="dialog"
            android:tooltipText="@string/preferences_language_selector" />
    </LinearLayout>
</LinearLayout>